[refac] overflow issue fixed

--- a/final-project/Agent-Bomber/css/style.css
+++ b/final-project/Agent-Bomber/css/style.css
@@ -19,6 +19,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 #game {
